Add test to verify configConvergedIn() is not called for inactive sys apps